# sigmetrics26-exploring-the-5g-digital-divide-in-the-non-contiguous-us-leo-satellites-to-the-rescue

./: .gitattributes  .gitignore  README.md  pyproject.toml
scripts/: constants.py  time_utils.py
scripts/configs/: alaska.py  hawaii.py  mainland.py
scripts/plotting/: common.py  matplotlibrc
scripts/plotting/configs/: mainland.py
scripts/plotting/fig10_cell_icmp_latency_with_areas/: main.py
scripts/plotting/fig12_starlink_network_kpis_across_locations/: main.py
scripts/plotting/fig13_starlink_network_kpis_with_areas/: main.py
scripts/plotting/fig14_starlink_outage/: main.py
scripts/plotting/fig15_starlink_cell_network_kpis_in_non_contiguous/: main.py
scripts/plotting/fig16_starlink_cell_network_kpis_with_areas_in_non_contiguous/: main.py
scripts/plotting/fig17_delta_tput_between_operators/: main.py
scripts/plotting/fig2_tput_with_cc_and_buffer/: main.py
scripts/plotting/fig3_cell_tech_distribution/: main.py
scripts/plotting/fig6_cell_kpis_across_loc/: main.py
scripts/plotting/fig7_cell_rb_alaska/: main.py
scripts/plotting/fig8_cell_tcp_dl_with_areas/: main.py
scripts/plotting/fig9_cell_tcp_ul_with_areas/: main.py
scripts/plotting/tab1_concurrent_outage/: main.py
scripts/shared/plotting/: IMultiPlotDataGenerator.py  IPlotDataGenerator.py  IPlotter.py  XcalDataAggregator.py  __init__.py
scripts/utilities/: DatasetHelper.py  distance_utils.py  math_utils.py
scripts/utilities/data_collection/: CdfStatCollector.py  NetworkMetricCollector.py  TputCdfStatCollector.py  __init__.py
scripts/utilities/io/: JsonDataManager.py  __init__.py
